Found out the how the system "saves" the input data. It literally overwrites the existing data file with new input data instead of writing in new line